Refresh selected state on active descendants

Items in single selection containers that have accessibility focus
should get the selected state. Code to mirror focus to selection exists,
but the selected state must be refreshed.

Bug: 846089
Change-Id: I90eb6aaec3be196b78126241ebf7e3d38ccda7c2
Reviewed-on: https://chromium-review.googlesource.com/1070520
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561353}
Former-commit-id: 1c15aee7f52b1e39dcf397b266048dfbd058d1c0