third_party/blink/renderer/modules/accessibility/ax_object.h
@@ -379,6 +379,8 @@ class MODULES_EXPORT AXObject : public GarbageCollectedFinalized<AXObject> {
   virtual AccessibilitySelectedState IsSelected() const {
     return kSelectedStateUndefined;
   }
+  // Is the object selected because selection is following focus?
+  virtual bool IsSelectedFromFocus() const { return false; }
   virtual bool IsSelectedOptionActive() const { return false; }
   virtual bool IsVisible() const { return true; }
   virtual bool IsVisited() const { return false; }
